traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:37: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalByColumn:40: error: expected start of definition
	override def forward()  {
                 ^TraversalByColumn:43: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalByColumn:46: error: expected start of definition
	override def backward() {
                 ^TraversalByColumn:49: error: Unmatched closing brace '}' ignored here
}
^