traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  while (positionFinale()==false){
    Next()
  }
  
}

def positionFinale():Boolean={
  while ((getMondeLargeur()-1,getMondeHauteur()-1) != (getX(),getY())){
    return false
  }
    return true
  
}

def Next() {
  var N=0
  
  while (positionFinale()==false){}  
  while (getY() < 6){
      ecritMessage(N)
      setPos(getX(),getY()+1)
      N=N+1
    }
    if (getY()==6){
      ecritMessage(N)
    }
    setPos(getX()+1,0)
    
    N=N+1
    
    
 } 
  
}